--- a/bloom-api/pyproject.toml
+++ b/bloom-api/pyproject.toml
@@ -8,6 +8,9 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 requests = "^2.32.4"
+uvicorn = "^0.35.0"
+fastapi = "^0.116.1"
+colorlog = "^6.9.0"
 
 
 [build-system]
