--- a/bloom-api/pyproject.toml
+++ b/bloom-api/pyproject.toml
@@ -11,6 +11,8 @@ requests = "^2.32.4"
 uvicorn = "^0.35.0"
 fastapi = "^0.116.1"
 colorlog = "^6.9.0"
+psycopg2 = "^2.9.10"
+python-dotenv = "^1.1.1"
 
 
 [build-system]
