--- a/bloom-api/pyproject.toml
+++ b/bloom-api/pyproject.toml
@@ -16,7 +16,7 @@ python-dotenv = "^1.1.1"
 python-jose = {extras = ["bcrypt"], version = "^3.5.0"}
 passlib = "^1.7.4"
 bcrypt = "4.0.1"
-pydantic = "^2.11.7"
+pydantic = {extras = ["email"], version = "^2.11.7"}
 
 
 [build-system]
