docs: atualiza documentação do env de exemplo

--- a/bloom-api/.env.example
+++ b/bloom-api/.env.example
@@ -1,7 +1,10 @@
 NOME_DB=nome-do-db
-SCHEMA_DB=nome-do-schema-db
+SCHEMA_DB=bloom_db
 USUARIO_DB=nome-do-usuario-db
 SENHA_DB=senha-do-usuario-db
 HOST_DB=ip-host-db
 
 
+SECRET_KEY = "chave_para_token"  
+ALGORITHM = "Algoritmo usado"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
