fix: corrige variáveis de ambiente para a conexão do banco

--- a/bloom-api/.env.example
+++ b/bloom-api/.env.example
@@ -1,7 +1,7 @@
-NOME_DB=nome-do-db
-SCHEMA_DB=nome-do-schema-db
-USUARIO_DB=nome-do-usuario-db
-SENHA_DB=senha-do-usuario-db
-HOST_DB=ip-host-db
+NOME_BD=nome-do-db
+SCHEMA_BD=nome-do-schema-db
+USUARIO_BD=nome-do-usuario-db
+SENHA_BD=senha-do-usuario-db
+HOST_BD=ip-host-db
 
 
