feat: adiciona login e autenticacao (#14)
* feat: cria repositório para Usuario

* feat: adiciona serviço de autenticação

* feat: cria entidade de Usuario

* chore: adiciona dependencias do bcrypt, passlib e pydantic

* chore: move pasta de repositorios para infra

* chore: atualiza dependencias do projeto

* feat: cria middleware para validar usuario atual

* feat: cria entidade e DTO de usuário

* feat: cria método de registro de usuário

* feat: cria método de login de usuário

* feat: cria controlador de usuário

* feat: adiciona rotas de autenticação

* feat: cria proteção de rotas por perfil

* docs: atualiza documentação do env de exemplo

* refactor: muda tempo de expiração de token para variavel de ambiente

* feat: adiciona log de erro ao executar comando sql

* fix: corrige uso da classe de conexão do banco para interpolar valores SQL

* fix: altera coluna de senha da tabela usuário para suportar hash de senhas de tamanho 256

---------

Co-authored-by: Davi Bittencourt <dbittencourt2002@gmail.com>

--- a/bloom-api/.env.example
+++ b/bloom-api/.env.example
@@ -5,3 +5,6 @@ SENHA_BD=senha-do-usuario-db
 HOST_BD=ip-host-db
 
 
+SECRET_KEY = "chave_para_token"  
+ALGORITHM = "Algoritmo usado"
+ACCESS_TOKEN_EXPIRE_MINUTES = 30
