--- a/bloom-api/pyproject.toml
+++ b/bloom-api/pyproject.toml
@@ -13,6 +13,10 @@ fastapi = "^0.116.1"
 colorlog = "^6.9.0"
 psycopg2 = "^2.9.10"
 python-dotenv = "^1.1.1"
+python-jose = {extras = ["bcrypt"], version = "^3.5.0"}
+passlib = "^1.7.4"
+bcrypt = "4.0.1"
+pydantic = {extras = ["email"], version = "^2.11.7"}
 
 
 [build-system]
