--- a/bloom-api/pyproject.toml
+++ b/bloom-api/pyproject.toml
@@ -17,6 +17,8 @@ python-jose = {extras = ["bcrypt"], version = "^3.5.0"}
 passlib = "^1.7.4"
 bcrypt = "4.0.1"
 pydantic = {extras = ["email"], version = "^2.11.7"}
+xhtml2pdf = "^0.2.17"
+jinja2 = "^3.1.6"
 
 
 [build-system]
