--- a/bloom-app/pubspec.yaml
+++ b/bloom-app/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   flutter_secure_storage: ^9.0.0 # Para armazenar o token de forma segura
   table_calendar: ^3.0.9
   intl: ^0.19.0
+  uuid: ^4.4.0
 
 dev_dependencies:
   flutter_test:
